update: navbar z-index fix

--- a/components/Navbar/styles.css
+++ b/components/Navbar/styles.css
@@ -5,6 +5,7 @@
 }
 
 .navbar {
+  z-index: 50;
   font-family: "SpaceGroteskReg", Arial, Helvetica, sans-serif;
 }
 
@@ -19,7 +20,7 @@
   position: fixed;
   top: 3em;
   left: 4em;
-  z-index: 1;
+  z-index: 51;
 }
 
 .nav-logo-image {
@@ -65,7 +66,7 @@
   transition: width 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
   transform-origin: right;
   cursor: var(--cursor-pointer);
-  z-index: 2;
+  z-index: 51;
   font-family: "SpaceGroteskMed", Arial, Helvetica, sans-serif;
 }
 
@@ -80,7 +81,7 @@
   transform: translateY(-50%);
   color: #000;
   transition: left 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
-  z-index: 1;
+  z-index: 50;
 }
 
 .menu-copy p {
@@ -109,7 +110,7 @@
   clip-path: circle(10% at 50% 50%);
   background-color: #af0000;
   transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
-  z-index: 10;
+  z-index: 50;
   overflow: hidden;
 }
 
@@ -179,7 +180,6 @@
   display: flex;
   background-color: #141414;
   pointer-events: none;
-  transform-style: preserve-3d;
   perspective: 1000px;
   clip-path: polygon(0% 100%, 100% 100%, 100% 100%, 0% 100%);
 }
@@ -344,7 +344,7 @@
   position: fixed; /* instead of absolute */
   top: 2em;
   left: 2em;
-  z-index: 1; /* ensure it’s above the menu overlay */
+  z-index: 50; /* ensure it’s above the menu overlay */
 }
 
 .logo a {
